--- a/package.json
+++ b/package.json
@@ -1,11 +1,44 @@
 {
-  "name": "dhl-server-app",
+  "name": "dhl-shipping-server",
   "version": "1.0.0",
-  "description": "An app powered by DHL API, exposing an RESP API for user access",
-  "main": "app.js",
+  "description": "DHL Shipping Web System - Server Side",
+  "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "test": "jest",
+    "lint": "eslint src/",
+    "lint:fix": "eslint src/ --fix"
   },
-  "author": "Lennart",
-  "license": "ISC"
+  "dependencies": {
+    "axios": "^1.6.2",
+    "axios-retry": "^4.5.0",
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "csv-parse": "^5.5.2",
+    "dotenv": "^16.3.1",
+    "express": "^5.1.0",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^9.0.2",
+    "knex": "^3.0.1",
+    "morgan": "^1.10.0",
+    "multer": "^2.0.0",
+    "mysql2": "^3.6.5",
+    "node-cron": "^4.0.7",
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^5.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^9.27.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
+    "supertest": "^7.1.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  }
 }
